--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,3 +24,13 @@
         margin: 0px;   
         border-radius: 50%;
 }
+
+.imgDev{
+    background-image: url("https://res.cloudinary.com/practicaldev/image/fetch/s--pcSkTMZL--/c_limit,f_auto,fl_progressive,q_80,w_190/https://practicaldev-herokuapp-com.freetls.fastly.net/assets/devlogo-pwa-512.png");
+    background-repeat: no-repeat;
+    background-size: 44.8125px 44.8125px;
+    display: block;
+    width: 60.8125px;
+    height: 44.8125px;
+    margin: 0px;  
+}
